@@ -11,7 +11,7 @@ user_query = SELECT \
 FROM mailbox,domain \
 WHERE mailbox.username='%u' \
     AND mailbox.domain='%d' \
-    AND mailbox.enable%Ls%Lc=1 \
+    AND (mailbox.enable%Ls%Lc=1 OR (mailbox.enablewebmail=1 AND '%Ls%Lc'='imapsecured' AND '%r'='127.0.0.1')) \
     AND mailbox.domain=domain.domain \
     AND domain.backupmx=0 \
     AND domain.active=1 \
